added hourly functionality

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   		</ul>
   	</div>
   	<div id="currently">
-	  	<div class="fields" id="weather">
-		  	<div id="summary"></div>
-		  	<div id="temp"></div>
-		  	<div id="humidity"></div>
-		  	<div id="it"></div>
+	  	<div class="fields">
+		  	<div id="c_summary"></div>
+		  	<div id="c_temp"></div>
+		  	<div id="c_humidity"></div>
 	  	</div>
   	</div>
   	<div id="hourly">
-  		Hourly Test
+  		<ul id="h_list" class="fields">
+      </ul>
   	</div>
   	<div id="daily">
   		Daily Test
