added daily and fixed some formatting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       </ul>
   	</div>
   	<div id="daily">
-  		Daily Test
+  		<ul id="d_list" class="fields">
+      </ul>
   	</div>
   </body>
 </html>
